logs/radicale-remind.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Radicale-2.1.8.egg-info'...
Listing './lib/python3.5/site-packages/abook-0.5.1.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/icstask-0.1.2.dist-info'...
Compiling './lib/python3.5/site-packages/icstask.py'...
***   File "./lib/python3.5/site-packages/icstask.py", line 56
    self._tasks = loads(run(['task', 'rc.verbose=nothing', 'rc.hooks=off', f'rc.data.location={self._data_location}', 'export'], stdout=PIPE).stdout.decode('utf-8'))
                                                                                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/radicale'...
Listing './lib/python3.5/site-packages/radicale/web'...
Listing './lib/python3.5/site-packages/radicale/web/css'...
Listing './lib/python3.5/site-packages/radicale_remind-0.2.1.dist-info'...
Compiling './lib/python3.5/site-packages/radicale_remind.py'...
***   File "./lib/python3.5/site-packages/radicale_remind.py", line 109
    return Item(self, item, href=href, etag=f'"{href}"', last_modified=self.last_modified)
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/remind-0.12.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/vobject'...
Listing './lib/python3.5/site-packages/vobject-0.9.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
